<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foo</name>
  <version>0.0.1</version>
  <description>Dummy</description>
  <maintainer email="dummy@dummy.dummy">Dummy</maintainer>
  <license>Dummy</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
